...
                        in: range,
                        step: step) {
                    Text("Max Character Count: \(maxChars)")
                        .font(.title2)
                        .fontWeight(.semibold)
                        
                }.padding(15).accessibilityIdentifier("MaxCountStepper")
        }
    }
}

struct SettingsView_Previews: PreviewProvider {
    @State static var colour = Color.yellow
...
